some changes made

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smt Z.S. Patel College of Management And Technology - Vidhya Kunj Sankul</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap" rel="stylesheet">
@@ -16,11 +16,11 @@
     <a href="Index.html"><img src="z.s patel.png"></a>
     <div class="nav-links">
         <ul>
-            <li><a href="Index.html">HOME</a></li>
-            <li><a href="about.html.html">ABOUT</a></li>
-            <li><a href="course.html - Copy.html">COURSE</a></li>
-            <li><a href="blog - Copy.html">BLOG</a></li>
-            <li><a href="contact- Copy.html">CONTACT</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="course.html">COURSE</a></li>
+            <li><a href="blog.html">BLOG</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </div>
 </nav>
