--- a/course.html
+++ b/course.html
@@ -16,11 +16,11 @@
     <a href="Index.html"><img src="z.s patel.png"></a>
     <div class="nav-links">
         <ul>
-            <li><a href="Index.html">HOME</a></li>
-            <li><a href="about.html.html">ABOUT</a></li>
-            <li><a href="course.html - Copy.html">COURSE</a></li>
-            <li><a href="blog - Copy.html">BLOG</a></li>
-            <li><a href="contact- Copy.html">CONTACT</a></li>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="contact.html">COURSE</a></li>
+            <li><a href="blog.html">BLOG</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </ul>
     </div>
 </nav>
