--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
     <section class="sub-header">
 <nav>
-    <a href="Index.html"><img src="z.s patel.png"></a>
+    <a href="index.html"><img src="z.s patel.png"></a>
     <div class="nav-links">
         <ul>
             <li><a href="index.html">HOME</a></li>
