--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="header">
 <nav>
-    <a href="Index.html"><img src="z.s patel.png"></a>
+    <a href="index.html"><img src="z.s patel.png"></a>
     <div class="nav-links">
         <ul>
             <li><a href="index.html">HOME</a></li>
