--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,96 +8,104 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="shortcut icon" href="https://www.google.com/favicon.ico" type="image/x-icon">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
 
     <section class="sub-header">
-<nav>
-    <a href="index.html"><img src="z.s patel.png"></a>
-    <div class="nav-links">
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="course.html">COURSE</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-    </div>
-</nav>
+        <nav>
+            <a href="index.html"><img src="z.s patel.png"></a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="course.html">COURSE</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
 
-<h1>Contact Us</h1>
+        <h1>Contact Us</h1>
     </section>
 
-<!--------------- Contact Us -->
+    <!--------------- Contact Us -->
 
-<section class="location">
+    <section class="location">
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.5615832734766!2d72.7783331744556!3d21.20956828048531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04d0661297ab1%3A0x431a7294d8b6cd91!2sZ.s.patel%20college%20surat!5e0!3m2!1sen!2sin!4v1690891266807!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.5615832734766!2d72.7783331744556!3d21.20956828048531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be04d0661297ab1%3A0x431a7294d8b6cd91!2sZ.s.patel%20college%20surat!5e0!3m2!1sen!2sin!4v1690891266807!5m2!1sen!2sin"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-</section>
+    </section>
 
-<section class="contact-us">
-    <div class="row">
-        <div class="contact-col">
-            <div>
-                <i class="fa-solid fa-house"></i>
-                <span>
-                    <h5>Shanti Kunj Society, Palanpur Jakatnaka</h5>
-                    <p> Surat, Gujarat 395009</p>
-                </span>
+    <section class="contact-us">
+        <div class="row">
+            <div class="contact-col">
+                <div>
+                    <i class="fa-solid fa-house"></i>
+                    <span>
+                        <h5>Shanti Kunj Society, Palanpur Jakatnaka</h5>
+                        <p> Surat, Gujarat 395009</p>
+                    </span>
+                </div>
+
+                <div>
+                    <i class="fa-solid fa-phone"></i>
+                    <span>
+                        <h5>(+0261) 2760963, (+91) 7383705580</h5>
+                        <p>Monday to Saturday, 7:30AM to 5:30PM CHAKU</p>
+                    </span>
+                </div>
+
+                <div>
+                    <i class="fa-solid fa-envelope"></i>
+                    <span>
+                        <h5>principal@zspatelcollege.com</h5>
+                        <p>Email us Your Qurey</p>
+                    </span>
+                </div>
             </div>
+            <div class="contact-col">
 
-            <div>
-                <i class="fa-solid fa-phone"></i>
-                <span>
-                    <h5>(+0261) 2760963, (+91) 7383705580</h5>
-                    <p>Monday to Saturday, 7:30AM to 5:30PM  CHAKU</p>
-                </span>
-            </div>
+                <form action="form-handler.php" method="post">
+                    <input type="text" name="name" placeholder="Enter Your Name" required>
+                    <input type="email" name="email" placeholder="Enter Email Address" required>
+                    <input type="text" name="subject" placeholder="Enter Your subject" required>
+                    <textarea rows="8" name="message" placeholder="Message" required></textarea>
+                    <button type="submit" class="hero-btn red-btn">Send Message</button>
+                </form>
 
-            <div>
-                <i  class="fa-solid fa-envelope"></i>
-                <span>
-                    <h5>principal@zspatelcollege.com</h5>
-                    <p>Email us Your Qurey</p>
-                </span>
+
+
             </div>
         </div>
-        <div class="contact-col">
-            
-        <form action="form-handler.php" method="post">
-            <input type="text" name="name" placeholder="Enter Your Name" required>
-            <input type="email" name="email" placeholder="Enter Email Address" required>
-            <input type="text" name="subject" placeholder="Enter Your subject" required>
-            <textarea  rows="8" name="message" placeholder="Message" required></textarea>
-            <button type="submit" class="hero-btn red-btn">Send Message</button>
-        </form>
+    </section>
 
 
 
+
+    <!------------footer-->
+
+    <section class="footer">
+        <h4>About Us</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae magnam adipisci
+            <br> quaerat illo illum repellendus praesentium saepe ea hic.
+        </p>
+        <div style="color: #f44336;" class="icons">
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-linkedin"></i>
         </div>
-    </div>
-</section>
+        <p>Made<i style="color: #f44336;" class="fa-regular fa-heart"></i>by Hardik Kamaliya</p>
+        
 
-
-
-
- <!------------footer-->
-
- <section class="footer">
-    <h4>About Us</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae magnam adipisci 
-      <br>   quaerat illo illum repellendus praesentium saepe ea hic.</p>
-      <div  style="color: #f44336;"    class="icons">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-linkedin"></i>
-      </div>
-      <p>Made<i style="color: #f44336;" class="fa-regular fa-heart"></i></i>by Hardik Kamaliya</p>
 </body>
-</fildset>
+
 </html>
