--- a/about.html
+++ b/about.html
@@ -35,11 +35,11 @@
 <section class="about-us">
     <div class="row">
         <div class="about-col">
-            <h1>We are the world's largest college</h1>
+            <h1>Welcome To Our College</h1>
             <p>Smt. Z.S.Patel College Of Management And Technology - had started BBA & BCA Programmes from academic year 2009 functioning as a graduate center of VNSGU, to meet the industry demand for skilled technocrats. "We make the students learn, unlearn and relearn", which seems to be the modern philosophy of education. The college carries out of traditional mission of discovering, developing, disseminating and preserving knowledge by supporting research activities. It aims at developing technical skills, human relation skills, communication skills and conceptual skills and imperative comprehensive knowledge of various aspects.
 
             </p>
-            <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+            <a href="https://goo.gl/maps/5MumZ46xz97vmNf2A" class="hero-btn red-btn">EXPLORE NOW</a>
         </div>
         <div class="about-col">
             <img src="z,s patel.jpg">
@@ -64,13 +64,13 @@
          <br>
         <br>
         <br>
-        Our Faculties organise teaching and research into individual subjects.
+        <i class="fa-solid fa-square-check" style="color: #f44336;"></i>Our Faculties organise teaching and research into individual subjects.
         <br>
         <br>
-        12 years of people, and achievements that continue to transform.
+        <i class="fa-solid fa-square-check" style="color: #f44336;"></i>12 years of people, and achievements that continue to transform.
         <br>
         <br>
-        The Institute's core values are as follows:freedom of thought.
+        <i class="fa-solid fa-square-check" style="color: #f44336;"></i> The Institute's core values are as follows:freedom of thought.
 
     </p>
         </div>
@@ -80,23 +80,26 @@
     </div>
 </section>
 
-
-
-
-
  <!------------footer-->
 
  <section class="footer">
     <h4>About Us</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae magnam adipisci 
-      <br>   quaerat illo illum repellendus praesentium saepe ea hic.</p>
-      <div  style="color: #f44336;"    class="icons">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-linkedin"></i>
+    <p>Welcome to SMT Z.S Patel College of Management And Technology , a vibrant institution dedicated to nurturing intellectual growth, fostering innovation, <br> and shaping future leaders. Situated at the heart of, our college stands as a beacon of educational excellence, <br> where knowledge meets inspiration.</p>
+      <div  style="color: #f44336;font-size: 25px;"    class="icons">
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-facebook" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-twitter" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-instagram" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-linkedin" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-whatsapp" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-skype" style="color: #f44336;"></i></a>
+       
       </div>
-      <p>Made<i style="color: #f44336;" class="fa-regular fa-heart"></i></i>by Hardik Kamaliya</p>
+      <p style="color: #777;">Developed By <i class="fa-solid fa-user" style="color:#999;"></i><span><a href="#" style="text-decoration: none;color: #f44336;"> Hardik Kamaliya</a></span></p>
  </section>
+
+
+
+
+ 
 </body>
 </html>
