--- a/blog.html
+++ b/blog.html
@@ -36,17 +36,16 @@
         <div class="blog-left">
             <img src="certificate.jpg">
             <h2>Our Certificate & Online Programs For 2023</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim neque velit, quisquam sint molestiae nisi accusantium voluptates quaerat quidem vitae hic, voluptate officia aliquid repellat ducimus, fugit adipisci iure dolores. 
-                <br>
-                <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto earum nulla tenetur provident inventore non fuga nesciunt reprehenderit, quis maxime assumenda! Exercitationem minus accusantium, natus eveniet rem consequatur nulla saepe. 
+            <p>Elevate your learning journey with our comprehensive range of Certificate & Online Programs for 2023. Whether you looking to advance in your current career or pivot into a new field, our diverse selection of courses has you covered. From Business Management and Healthcare to Technology and the Arts, our programs are tailored to suit various interests and goals.
             <br>
             <br>
-
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam rerum dolore recusandae iste, deserunt fugiat veritatis molestias praesentium exercitationem obcaecati, magnam dolor dignissimos pariatur natus tempora velit vitae ex quisquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste dignissimos veritatis nesciunt commodi velit.
+            Immerse yourself in a flexible and engaging online environment, where expert instructors guide you through interactive modules, discussions, and real-world projects. Upon successful completion, you'll earn a valuable certificate, recognized by industries worldwide. Benefit from networking opportunities with peers globally, and access a wealth of resources to enhance your knowledge.
             <br>
             <br>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto doloremque officiis tempora, voluptates a hic! Molestias dicta earum praesentium delectus velit. Molestias veritatis facere velit temporibus tempore ab quisquam excepturi.
+            Discover transformative Certificate & Online Programs for 2023, offering flexible, expert-led learning tailored to your goals. Gain valuable skills, earn certificates, and enhance your career prospects in a convenient online format. Elevate your future - enroll now for a brighter tomorrow.
+            <br>
+            <br>
+            Our affordable tuition options and convenient scheduling ensure that quality education is within your reach. Embrace the future of learning by enrolling today and empower yourself for success.
             </p>
 
             <div class="comment-box">
@@ -105,23 +104,25 @@
     </div>
 </section>
 
-
-
-
-
  <!------------footer-->
 
  <section class="footer">
     <h4>About Us</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae magnam adipisci 
-      <br>   quaerat illo illum repellendus praesentium saepe ea hic.</p>
-      <div  style="color: #f44336;"    class="icons">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-linkedin"></i>
+    <p>Welcome to SMT Z.S Patel College of Management And Technology , a vibrant institution dedicated to nurturing intellectual growth, fostering innovation, <br> and shaping future leaders. Situated at the heart of, our college stands as a beacon of educational excellence, <br> where knowledge meets inspiration.</p>
+      <div  style="color: #f44336;font-size: 25px;"    class="icons">
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-facebook" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-twitter" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-instagram" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-linkedin" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-whatsapp" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-skype" style="color: #f44336;"></i></a>
+       
       </div>
-      <p>Made<i style="color: #f44336;" class="fa-regular fa-heart"></i></i>by Hardik Kamaliya</p>
+      <p style="color: #777;">Developed By <i class="fa-solid fa-user" style="color:#999;"></i><span><a href="#" style="text-decoration: none;color: #f44336;"> Hardik Kamaliya</a></span></p>
  </section>
+
+
+
+ 
 </body>
 </html>
