--- a/contact.html
+++ b/contact.html
@@ -87,25 +87,22 @@
         </div>
     </section>
 
+ <!------------footer-->
 
-
-
-    <!------------footer-->
-
-    <section class="footer">
-        <h4>About Us</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae magnam adipisci
-            <br> quaerat illo illum repellendus praesentium saepe ea hic.
-        </p>
-        <div style="color: #f44336;" class="icons">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
-        </div>
-        <p>Made<i style="color: #f44336;" class="fa-regular fa-heart"></i>by Hardik Kamaliya</p>
-        
+ <section class="footer">
+    <h4>About Us</h4>
+    <p>Welcome to SMT Z.S Patel College of Management And Technology , a vibrant institution dedicated to nurturing intellectual growth, fostering innovation, <br> and shaping future leaders. Situated at the heart of, our college stands as a beacon of educational excellence, <br> where knowledge meets inspiration.</p>
+      <div  style="color: #f44336;font-size: 25px;"    class="icons">
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-facebook" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-twitter" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-instagram" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-linkedin" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-whatsapp" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-skype" style="color: #f44336;"></i></a>
+       
+      </div>
+      <p style="color: #777;">Developed By <i class="fa-solid fa-user" style="color:#999;"></i><span><a href="#" style="text-decoration: none;color: #f44336;"> Hardik Kamaliya</a></span></p>
+ </section>
 
 </body>
-
 </html>
