--- a/course.html
+++ b/course.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
-            <li><a href="contact.html">COURSE</a></li>
+            <li><a href="course.html">COURSE</a></li>
             <li><a href="blog.html">BLOG</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
@@ -37,16 +37,16 @@
 
         <div class="row">
             <div class="course-col">
-                <h3>Intermadiate</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, laborum voluptatibus? Voluptate, tenetur.</p>
+                <h3>Intermediate Marketing</h3>
+                <p>Develop strategic insights into consumer behavior, branding, and digital advertising techniques.</p>
             </div>
             <div class="course-col">
-                <h3>Degree</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, laborum voluptatibus? Voluptate, tenetur.</p>
+                <h3>Bachelor's Degree</h3>
+                <p>Three-year undergraduate program providing in-depth knowledge and skills in a chosen field, offering a foundation for further studies or entry into the job market.</p>
             </div>
             <div class="course-col">
                 <h3>Post Graduation</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, laborum voluptatibus? Voluptate, tenetur.</p>
+                <p>Advanced academic pursuit after completing a bachelor's degree, offering specialization, research, and expertise in a chosen field.</p> 
             </div> 
         </div>
     </section>
@@ -82,23 +82,25 @@
     </div>
 </section>
 
-
-
-
-
- <!------------footer-->
+   <!------------footer-->
 
  <section class="footer">
     <h4>About Us</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae magnam adipisci 
-      <br>   quaerat illo illum repellendus praesentium saepe ea hic.</p>
-      <div  style="color: #f44336;"    class="icons">
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-linkedin"></i>
+    <p>Welcome to SMT Z.S Patel College of Management And Technology , a vibrant institution dedicated to nurturing intellectual growth, fostering innovation, <br> and shaping future leaders. Situated at the heart of, our college stands as a beacon of educational excellence, <br> where knowledge meets inspiration.</p>
+      <div  style="color: #f44336;font-size: 25px;"    class="icons">
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-facebook" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-twitter" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-instagram" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-linkedin" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-whatsapp" style="color: #f44336;"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-skype" style="color: #f44336;"></i></a>
+       
       </div>
-      <p>Made<i style="color: #f44336;" class="fa-regular fa-heart"></i></i>by Hardik Kamaliya</p>
+      <p style="color: #777;">Developed By <i class="fa-solid fa-user" style="color:#999;"></i><span><a href="#" style="text-decoration: none;color: #f44336;"> Hardik Kamaliya</a></span></p>
  </section>
+
+
+
+ 
 </body>
 </html>
