--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                     <i class="fa-solid fa-phone"></i>
                     <span>
                         <h5>(+0261) 2760963, (+91) 7383705580</h5>
-                        <p>Monday to Saturday, 7:30AM to 5:30PM CHAKU</p>
+                        <p>Monday to Saturday, 7:30AM to 5:30PM</p>
                     </span>
                 </div>
 
