--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
        <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-skype" style="color: #f44336;"></i></a>
        
       </div>
-      <p style="color: #777;">Developed By <i class="fa-solid fa-user" style="color:#999;"></i><span><a href="#" style="text-decoration: none;color: #f44336;"> Hardik Kamaliya</a></span></p>
+      <p style="color: #777;">Developed By <i class="fa-solid fa-user" style="color:#999;"></i><span><a href="https://portfolio-hardik.vercel.app/" style="text-decoration: none;color: #f44336;"> Hardik Kamaliya</a></span></p>
  </section>
 </body>
 </html>
