--- a/index.html
+++ b/index.html
@@ -181,16 +181,18 @@
  <section class="footer">
     <h4>About Us</h4>
     <p>Welcome to SMT Z.S Patel College of Management And Technology , a vibrant institution dedicated to nurturing intellectual growth, fostering innovation, <br> and shaping future leaders. Situated at the heart of, our college stands as a beacon of educational excellence, <br> where knowledge meets inspiration.</p>
-      <div  style="color: #f44336;font-size: 25px;"    class="icons">
-       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-facebook" style="color: #f44336;"></i></a>
-       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-twitter" style="color: #f44336;"></i></a>
-       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-instagram" style="color: #f44336;"></i></a>
-       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-linkedin" style="color: #f44336;"></i></a>
-       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-whatsapp" style="color: #f44336;"></i></a>
-       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-skype" style="color: #f44336;"></i></a>
-       
+      <div class="icons">
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-facebook"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-twitter"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-instagram"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-linkedin"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-whatsapp"></i></a>
+       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-skype"></i></a>
+    <br>
+      <p>Developed By <i class="fa-solid fa-user"></i><span><a href="https://portfolio-hardik.vercel.app/"> Hardik Kamaliya</a></span></p>
       </div>
-      <p style="color: #777;">Developed By <i class="fa-solid fa-user" style="color:#999;"></i><span><a href="https://portfolio-hardik.vercel.app/" style="text-decoration: none;color: #f44336;"> Hardik Kamaliya</a></span></p>
+
+      
  </section>
 </body>
 </html>
