--- a/htmlfiles/course.html
+++ b/htmlfiles/course.html
@@ -1,30 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smt Z.S. Patel College of Management And Technology - Vidhya Kunj Sankul</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="shortcut icon" href="https://www.google.com/favicon.ico" type="image/x-icon">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Smt Z.S. Patel College of Management And Technology - Vidhya Kunj Sankul
+    </title>
+    <link rel="stylesheet" href="/css/stylee.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <section class="sub-header">
-<nav>
-    <a href="index.html"><img src="z.s patel.png"></a>
-    <div class="nav-links">
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="course.html">COURSE</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-    </div>
-</nav>
+      <nav>
+        <a href="index.html"
+          ><img class="nav-img" src="/img/z.s patel.png"
+        /></a>
+        <div class="nav-links" id="navLinks">
+          <i class="fa fa-times" onclick="hidemenu()"></i>
+          <ul>
+            <li><a href="/htmlfiles/index.html">HOME</a></li>
+            <li><a href="/htmlfiles/about.html">ABOUT</a></li>
+            <li><a href="/htmlfiles/course.html">COURSE</a></li>
+            <li><a href="/htmlfiles/blog.html">BLOG</a></li>
+            <li><a href="/htmlfiles/contact.html">CONTACT</a></li>
+            <li><a href="https://zspatelcollege.co.in/evidya/login.php" target="_blank">eVidya Login</a></li>
+          </ul>
+        </div>
+        <i class="fa fa-bars" onclick="showmenu()"></i>
+      </nav>
+
 
 <h1>Our Courses</h1>
     </section>
@@ -59,19 +78,19 @@
 
     <div class="row">
         <div class="facilities-col">
-            <img src="library.png">
+            <img src="/img/library.png">
             <h3>World Class Library</h3>
             <p>Beyond helping scholars learn, research, and pursue truth, our libraries are dedicated to expanding knowledge and intellectual exploration for everyone.</p>
         </div>
 
         <div class="facilities-col">
-            <img src="basketball.png">
+            <img src="/img/basketball.png">
             <h3>Largest Play Ground</h3>
             <p>The college has a well maintained playground where regular sports and games such as football, cricket etc are conducted time to time. Z.S Patel Trophy, Z.S Patel Premier League and Arjuna & Drona cricket tournament are highlights. A Basketball court is also a significant part of the playground.</p>
         </div>
 
         <div class="facilities-col">
-            <img src="cafeteria.png">
+            <img src="/img/cafeteria.png">
             <h3>Tasty and Healthy Food</h3>
             <p>Tasty and Healthy Food</h3>
                 <p>The College canteen is one of the liveliest areas of the campus. Our canteen aims at providing a variety of quality food & beverages at highly competitive rates.
@@ -82,25 +101,17 @@
     </div>
 </section>
 
-   <!------------footer-->
-
- <section class="footer">
-    <h4>About Us</h4>
-    <p>Welcome to SMT Z.S Patel College of Management And Technology , a vibrant institution dedicated to nurturing intellectual growth, fostering innovation, <br> and shaping future leaders. Situated at the heart of, our college stands as a beacon of educational excellence, <br> where knowledge meets inspiration.</p>
-      <div  style="color: #f44336;font-size: 25px;"    class="icons">
-       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-facebook" style="color: #f44336;"></i></a>
-       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-twitter" style="color: #f44336;"></i></a>
-       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-instagram" style="color: #f44336;"></i></a>
-       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-linkedin" style="color: #f44336;"></i></a>
-       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-whatsapp" style="color: #f44336;"></i></a>
-       <a href="https://instagram.com/4kinghardikop?igshid=NGExMmI2YTkyZg=="><i  class="fa-brands fa-skype" style="color: #f44336;"></i></a>
-       
-      </div>
-      <p style="color: #777;">Developed By <i class="fa-solid fa-user" style="color:#999;"></i><span><a href="#" style="text-decoration: none;color: #f44336;"> Hardik Kamaliya</a></span></p>
- </section>
-
-
-
- 
 </body>
+<!------------------------ JS FOR TOGGLE MENU --------------->
+<script>
+    var navLinks = document.getElementById("navLinks");
+
+    function showmenu() {
+      navLinks.style.right = "0";
+    }
+
+    function hidemenu() {
+      navLinks.style.right = "-200px";
+    }
+  </script>
 </html>
